--- a/config.json
+++ b/config.json
@@ -1,157 +1,1 @@
-{
-    "MIKROTIK_COMPANY_ID": 2383,
-    "KART_DATA_FILE": "kart_data.json",
-    "CONFIG_FILE": "config.json",
-    "LOG_DIRECTORY": "logs",
-    "GLOBAL_ABSENCE_RSSI_THRESHOLD": -120,
-    "RIDE_START_CONFIRMATION_SECONDS": 20,
-    "DEVICE_EXPIRATION_SECONDS": 120,
-    "LIVE_UI_UPDATE_SECONDS": 2,
-    "DATABASE_FILE": "kart_rides.db",
-    "PRUNE_KART_THRESHOLD_DAYS": 7,
-    "PRICE_CATEGORIES": {
-        "Kart mare": [
-            {
-                "minutes": 30,
-                "price": 25
-            },
-            {
-                "minutes": 60,
-                "price": 40
-            }
-        ],
-        "Implicit": []
-    },
-    "MINIMUM_RIDE_DURATION_FOR_REVENUE": 15,
-    "GITHUB_PUSH_INTERVAL_SECONDS": 100,
-    "GITHUB_POLL_INTERVAL_SECONDS": 10,
-    "GITHUB_CONFIG_FILE": "github_config.json",
-    "REVENUE_FILE": "revenue.json",
-    "AWAITING_TO_IN_USE_SECONDS": 20,
-    "PRESENCE_CONFIDENCE_THRESHOLD_HIGH": 0.8,
-    "PRESENCE_CONFIDENCE_THRESHOLD_LOW": 0.2,
-    "PRESENCE_CONFIDENCE_STEP": 0.25,
-    "KNOWN_KARTS": {
-        "DC:2C:6E:9F:99:9F": {
-            "mac_address": "DC:2C:6E:9F:99:9F",
-            "name": "Kart-55 fara 1",
-            "status": "IN_USE",
-            "last_seen": 1759676600.3238728,
-            "last_known_rssi": -92,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.0490901,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9F:99:9A": {
-            "mac_address": "DC:2C:6E:9F:99:9A",
-            "name": "Kart-26",
-            "status": "IN_USE",
-            "last_seen": 1759676602.3241756,
-            "last_known_rssi": -71,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.0490901,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9D:30:9F": {
-            "mac_address": "DC:2C:6E:9D:30:9F",
-            "name": "Kart-15",
-            "status": "IN_USE",
-            "last_seen": 1759676602.3241622,
-            "last_known_rssi": -82,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.053597,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9F:99:B4": {
-            "mac_address": "DC:2C:6E:9F:99:B4",
-            "name": "Kart-43",
-            "status": "IN_USE",
-            "last_seen": 1759676576.3208742,
-            "last_known_rssi": -80,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.059749,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9D:22:59": {
-            "mac_address": "DC:2C:6E:9D:22:59",
-            "name": "Kart-42",
-            "status": "IN_USE",
-            "last_seen": 1759676598.3232129,
-            "last_known_rssi": -78,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.0607479,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9F:9C:8C": {
-            "mac_address": "DC:2C:6E:9F:9C:8C",
-            "name": "Kart-47",
-            "status": "IN_USE",
-            "last_seen": 1759676578.320472,
-            "last_known_rssi": -92,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.0617466,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9F:98:BE": {
-            "mac_address": "DC:2C:6E:9F:98:BE",
-            "name": "Kart-25",
-            "status": "IN_USE",
-            "last_seen": 1759676029.0373516,
-            "last_known_rssi": -79,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.0617466,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9F:98:C7": {
-            "mac_address": "DC:2C:6E:9F:98:C7",
-            "name": "Kart-46",
-            "status": "IN_USE",
-            "last_seen": 1759676600.3238826,
-            "last_known_rssi": -82,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.0617466,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9F:98:3E": {
-            "mac_address": "DC:2C:6E:9F:98:3E",
-            "name": "Kart-13",
-            "status": "IN_USE",
-            "last_seen": 1759676602.3241715,
-            "last_known_rssi": -81,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.062765,
-            "category": "Kart mare",
-            "is_online": false
-        },
-        "DC:2C:6E:9F:98:64": {
-            "mac_address": "DC:2C:6E:9F:98:64",
-            "name": "Kart-44",
-            "status": "IN_USE",
-            "last_seen": 1759676033.0378256,
-            "last_known_rssi": -91,
-            "is_virtual": false,
-            "notes": "",
-            "time_entered_await": 1764603882.062765,
-            "category": "Kart mare",
-            "is_online": false
-        }
-    },
-    "config_updated_at": "2025-12-01T17:47:41.591596"
-}
+{"MIKROTIK_COMPANY_ID":2383,"KART_DATA_FILE":"kart_data.json","CONFIG_FILE":"config.json","LOG_DIRECTORY":"logs","GLOBAL_ABSENCE_RSSI_THRESHOLD":-120,"RIDE_START_CONFIRMATION_SECONDS":20,"DEVICE_EXPIRATION_SECONDS":120,"LIVE_UI_UPDATE_SECONDS":2,"DATABASE_FILE":"kart_rides.db","PRUNE_KART_THRESHOLD_DAYS":7,"PRICE_CATEGORIES":{"Kart mare":[{"minutes":30,"price":25},{"minutes":60,"price":40}],"Implicit":[]},"MINIMUM_RIDE_DURATION_FOR_REVENUE":15,"GITHUB_PUSH_INTERVAL_SECONDS":100,"GITHUB_POLL_INTERVAL_SECONDS":10,"GITHUB_CONFIG_FILE":"github_config.json","REVENUE_FILE":"revenue.json","AWAITING_TO_IN_USE_SECONDS":20,"PRESENCE_CONFIDENCE_THRESHOLD_HIGH":0.8,"PRESENCE_CONFIDENCE_THRESHOLD_LOW":0.2,"PRESENCE_CONFIDENCE_STEP":0.25,"KNOWN_KARTS":{"DC:2C:6E:9F:99:9F":{"name":"Kart-55 fara test","category":"Kart mare"},"DC:2C:6E:9F:99:9A":{"mac_address":"DC:2C:6E:9F:99:9A","name":"Kart-26","status":"IN_USE","last_seen":1759676602.3241756,"last_known_rssi":-71,"is_virtual":false,"notes":"","time_entered_await":1764603882.0490901,"category":"Kart mare","is_online":false},"DC:2C:6E:9D:30:9F":{"mac_address":"DC:2C:6E:9D:30:9F","name":"Kart-15","status":"IN_USE","last_seen":1759676602.3241622,"last_known_rssi":-82,"is_virtual":false,"notes":"","time_entered_await":1764603882.053597,"category":"Kart mare","is_online":false},"DC:2C:6E:9F:99:B4":{"mac_address":"DC:2C:6E:9F:99:B4","name":"Kart-43","status":"IN_USE","last_seen":1759676576.3208742,"last_known_rssi":-80,"is_virtual":false,"notes":"","time_entered_await":1764603882.059749,"category":"Kart mare","is_online":false},"DC:2C:6E:9D:22:59":{"mac_address":"DC:2C:6E:9D:22:59","name":"Kart-42","status":"IN_USE","last_seen":1759676598.3232129,"last_known_rssi":-78,"is_virtual":false,"notes":"","time_entered_await":1764603882.0607479,"category":"Kart mare","is_online":false},"DC:2C:6E:9F:9C:8C":{"mac_address":"DC:2C:6E:9F:9C:8C","name":"Kart-47","status":"IN_USE","last_seen":1759676578.320472,"last_known_rssi":-92,"is_virtual":false,"notes":"","time_entered_await":1764603882.0617466,"category":"Kart mare","is_online":false},"DC:2C:6E:9F:98:BE":{"mac_address":"DC:2C:6E:9F:98:BE","name":"Kart-25","status":"IN_USE","last_seen":1759676029.0373516,"last_known_rssi":-79,"is_virtual":false,"notes":"","time_entered_await":1764603882.0617466,"category":"Kart mare","is_online":false},"DC:2C:6E:9F:98:C7":{"mac_address":"DC:2C:6E:9F:98:C7","name":"Kart-46","status":"IN_USE","last_seen":1759676600.3238826,"last_known_rssi":-82,"is_virtual":false,"notes":"","time_entered_await":1764603882.0617466,"category":"Kart mare","is_online":false},"DC:2C:6E:9F:98:3E":{"mac_address":"DC:2C:6E:9F:98:3E","name":"Kart-13","status":"IN_USE","last_seen":1759676602.3241715,"last_known_rssi":-81,"is_virtual":false,"notes":"","time_entered_await":1764603882.062765,"category":"Kart mare","is_online":false},"DC:2C:6E:9F:98:64":{"mac_address":"DC:2C:6E:9F:98:64","name":"Kart-44","status":"IN_USE","last_seen":1759676033.0378256,"last_known_rssi":-91,"is_virtual":false,"notes":"","time_entered_await":1764603882.062765,"category":"Kart mare","is_online":false}},"config_updated_at":"2025-12-24T13:17:41.476239"}
